# SMLF-Library

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LinearRegression  LinearRegression.hpp  README.md  main  main.cpp
Algorithms/Regression/: LinearRegression.hpp
DataFrame/: DataFrame.hpp
DataSource/: concrete_data.csv  fakeData.csv  fakeData2.csv  perfectFakeData.csv  tvmarketing.csv
Measures/: Measures.hpp
NN/: NN.hpp
Optimiser/: Optimiser.hpp
examples/: CMakeLists.txt  Marketingcampaigns.csv  fake.csv  framingham.csv  main.cpp
include/: LinearRegression.hpp  LogisticRegression.hpp  Measures.hpp  activation.hpp
